# flowcell-manifold

./: README.md  pyproject.toml
.github/workflows/: cad-release.yml  lint-and-test.yml
flowcell_manifold/: part1.py  part2.py
flowcell_manifold/utils/: viewer.py
