[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowcell_manifold"
version = "0.1.0"
description = "A modular flow cell manifold for routing fluid samples to multiple sensors, enabling external measurement without direct vessel integration."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Cameron Brooks", email = "cambrooks3393@gmail.com" },
]
dependencies = [
    "build123d",
    "build123d_ease",
    "ocp_vscode",
    "bd_warehouse @ git+https://github.com/gumyr/bd_warehouse.git",
    "loguru",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "flowcell_manifold",
    "flowcell_manifold.*",
]

[tool.ruff]
target-version = "py310"
line-length = 79
select = ["E", "F", "I", "C", "Q"]
ignore = [
    "D203",
    "D213",
    "ERA001",
    "S101",
    "RET504",
    "COM812",
    "D100",
    "TD003",
    "FIX002",
]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[tool.black]
line-length = 79
